fixed issue with caledar overlapping images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,5 +150,6 @@ div[data-title]:hover:after {
   .caledar {
     margin-top: 400px;
     margin-left: 0 !important;
+    width: auto;
   }
 }
